# byu-cs301r-projects

./: .gitignore  301R HW1 Writeup.md  request.py  test.txt  test_nospace.txt  test_onlyalpahanum.txt  tmp.json  tmp2.json  usage.py
HW_1a/: requirements.txt
HW_1b/: format_json.txt  fullprompt_list1.md  requestjson.py
hw_1a/: request.py
hw_1b/: HW2 Writeup.md  format_json.md  format_yaml.md  fullprompt_list2.md  prompt_list.md  prompt_list2.md  prompt_list_short.md  request3in.py  requestjson.py
hw_1c/: chatbot.py  prompt1.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md
hw_1d/: chatbot.py  prompt1.md
hw_1e/: HW 5 Aditional Notes.md  HW 5 Writeup.md  benchmark.py  prompt0.md  prompt1.md  prompt2.md  test.py
hw_2a/: Embedding Workflow.ipynb  HW 7 Writeup.md  Live Embedding Demo.ipynb  book-of-mormon.json  chunking.py
hw_2b/: chatbot.py  chroma_demo.py  download_gc_talks.py
hw_2d/: HW 2d.md  chatbot.py  chatbot_with_weather.py  test.py  toolbot.py  weather.py
hw_2e/: HW 2e Writeup.md  build_toolchat_docker.sh  codebot.py  poem.md  prompt.md  superbowldb.py  task.py  toolbot.py
hw_2f/: HW 2f Writeup.md  mcpbot.py  opinions.md  stock.md  toolbot.py  tools.py  usage.py
hw_3a/: HW 3a Writeup.md  deep_research.py  deep_research.yaml  guarded_chat.py  guardrails.yaml  poet.yaml  redaction.yaml  run_agent.py  single_shot.py  spanish.yaml  structure.yaml  tools.py  two_step.py  usage.py
hw_3b/: agents.py  (+12 more)
hw_3e/: pyproject.toml  snake.py
hw_3e/.myteam/python/testing/: skill.md
hw_3e/src/hw_3e/: __init__.py  snake.py
hw_3e/tests/: test_snake.py
(+67 files in other folders)
